UPDATE:: use static file

--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -7,5 +7,11 @@
   </head>
   <body>
     <h1>Hello World With EJS!!!</h1>
+    <div>
+      <img
+        src="/images//z4191727383175_115efad2a016c9e32b1e00b14202caef.jpg"
+        alt="../public//images//z4191727383175_115efad2a016c9e32b1e00b14202caef.jpg"
+      />
+    </div>
   </body>
 </html>
